research/primary/reference-ecosystems/ncr-deputy/deputy-library/src/snapshots/deputy_library__validation__tests__event_type_package_is_parsed_and_passes_validation.snap
---
source: deputy-library/src/validation.rs
expression: project
---
[package]
name = 'my-cool-condition'
description = 'description'
version = '1.0.0'
license = 'Apache-2.0'
readme = 'readme.md'
assets = [
    [
    'src/configs/my-cool-config1.yml',
    '/var/opt/my-cool-service1',
    '744',
],
    [
    'src/configs/my-cool-config2.yml',
    '/var/opt/my-cool-service2',
    '777',
],
    [
    'src/configs/my-cool-config3.yml',
    '/var/opt/my-cool-service3',
],
]

[content]
type = 'Event'

[event]
file_path = 'info.md'
