research/primary/reference-ecosystems/ncr-deputy/deputy-library/src/snapshots/deputy_library__validation__tests__exercise_type_package_is_parsed_and_passes_validation.snap
---
source: deputy-library/src/validation.rs
expression: project
---
[package]
name = 'my-cool-condition'
description = 'description'
version = '1.0.0'
license = 'Apache-2.0'
readme = 'readme.md'

[content]
type = 'Exercise'

[exercise]
file_path = 'exercise.yml'
